--- a/css/colectivos.css
+++ b/css/colectivos.css
@@ -21,6 +21,7 @@ body { height: 100%; margin: 0; padding: 0 }
 
 .botonesCentrados{
     padding: 0px 30px 0px 30px ;
+    font-size: x-large;
 }
 
 #cuadradito{
